✨ feat(styles、components、views、api、icons): 项目模块新增及完善
1、新增register页面 2、补充共通css变量variable.css 3、补充element ui dialog样式 4、补充svg图片

--- a/src/styles/element-ui.scss
+++ b/src/styles/element-ui.scss
@@ -24,6 +24,10 @@
   margin: 0 auto;
 }
 
+.el-dialog__header {
+  border-bottom: 1px solid #dedede;
+}
+
 // refine element ui upload
 .upload-container {
   .el-upload {
