--- a/src/styles/element-ui.scss
+++ b/src/styles/element-ui.scss
@@ -25,7 +25,7 @@
 }
 
 .el-dialog__body {
-  padding: 25px 20px;
+  padding: 15px 20px;
 }
 
 .el-dialog__header {
@@ -65,7 +65,7 @@
 .card-item:hover {
   border-color: #91bcfc;
   outline: 0;
-  box-shadow: 0 0 0 6px rgba(53, 129, 243, 0.25);
+  box-shadow: 0 0 0 5px rgba(53, 129, 243, 0.25);
 }
 
 // tabs
@@ -84,4 +84,20 @@
 }
 .el-tabs__content {
   background-color: rgb(245, 242, 244);
+}
+
+// scrollbar
+::-webkit-scrollbar {
+  width: 6px;
+}
+::-webkit-scrollbar-thumb {
+  position: relative;
+  display: block;
+  width: 0;
+  height: 0;
+  cursor: pointer;
+  border-radius: 20px;
+  background-color: rgba(144, 147, 153, 0.3);
+  -webkit-transition: 0.3s background-color;
+  transition: 0.3s background-color;
 }
